k8s/services/payment-service/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: ecommerce-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      serviceAccountName: microservice-sa
      containers:
      - name: payment-service
        image: selimhorri/payment-service-ecommerce-boot:0.1.0
        ports:
        - containerPort: 8400
