k8s/services/payment-service/payment-service-s.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: ecommerce-microservice
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
  - port: 8400
    targetPort: 8400
